fixed error rext overlapping in password section

--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -41,6 +41,10 @@
         top: 40px;
         left: 40px;
     }
+
+    .input-error-password {
+        margin: 10px 0px;
+    }
 }
 
 @media (min-width: 1260px) and (max-width: 1300px) and (min-height: 780px) and (max-height: 820px) {
